# md2ppt

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  absolute_paths.py  apm.yml  comment.py  custom_paragraph.py  flatten.py  json2pptx.py  json2slide.py  json_to_slides.py  main.py  markdown_flatten_embed.py  markdown_parser.py  markdown_to_json.py  markdown_to_presentation.py  md2json.py  pyproject.toml  requirements.txt  skills-lock.json  slides.json  slides_to_pptx.py  test.py  wildcard_break.py
docs/: arugments.md
md2ppt/: __init__.py  templates.py
md2ppt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
md2ppt/refs/: hanaro.pptx  inno.pptx
test/: HTML-CSS.json  HTML-CSS.md  HTML-CSS.slides.json  bullet.py  chatgpt.json  chatgpt.md  chatgpt.slides.json  chatgpt_.json  chatgpt_.md  chatgpt_.slides.json  flattened.json  flattened.md  flattened_slides.json  json2list.py  json2yaml.py  list.md  list_iter.py  makeppt.py  no_bullet.pptx  ppt.py  print_layout.py  sample_output.pptx  slide2json.md  slides.json  slides.yaml  table_example.pptx  test.bat  test.cmd  test.ipynb  test.md  test.py  teste.bat  zapier.json  zapier.md  zapier.slides.json
test/service/: service_.json  service_.md  service__slides.json
utils/: code_highlight.py  comment.py  expand.py  util.py
wiki/: LOG.md  REQUIREMENT.md
