[project]
name = "md2ppt"
version = "0.1.0"
description = "A tool to convert Markdown files to PowerPoint presentations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistune>=3.1.3",
    "pillow>=11.3.0",
    "pygments>=2.19.2",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.2",
]

[tool.setuptools]
py-modules = [
    "main",
    "md2json",
    "json2slide",
    "json2pptx",
    "flatten",
    "absolute_paths",
]

[tool.setuptools.packages.find]
include = ["utils*"]


[project.scripts]
md2ppt = "main:main"
